# ST1701_dis-rag-vehicle-selection

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: .env.example  README.md  main.py  pyproject.toml
api/src/: config.py
api/src/adapters/input/api/: router.py
api/src/adapters/output/embeddings/: embedding_adapters.py
api/src/adapters/output/knowledge/: chroma_adapter.py  neo4j_adapter.py
api/src/adapters/output/llm/: google_adapter.py  ollama_adapter.py  openai_adapter.py  other_adapters.py
api/src/adapters/output/observability/: langfuse_adapter.py
api/src/core/domain/: models.py
api/src/core/ports/: interfaces.py
api/src/core/services/: cost_calculator.py  ingestion_service.py  recommendation_service.py
api/src/core/utils/: prompt_builder.py  response_parser.py
api/tests/unit/: test_core.py
docs/: README.md  arquitectura-rag.md  implementation-plan.md  pr-pipeline-ingesta-rag.md
docs/adr/: 0001-monorepo-unificado.md  0002-bases-de-datos-contenerizadas.md  0003-ingesta-centralizada-en-kb-generator.md  0004-modelo-de-grafo-neo4j.md  0005-queries-cypher-parametrizadas.md  0006-calculo-deterministico-costos-tiempos.md  0007-categorias-unificadas-prefijo-numerico.md  0008-neo4j-community-invariantes-en-ingester.md  0009-venv-compartido.md  README.md
docs/entrega_2/: entrega_final_disenio_y_analisis.md
eval/: export_langfuse.py  llm_comparison_agent.py
eval/skills/llm-evaluator/: SKILL.md
kb-generator/: README.md  pyproject.toml  requirements.txt
kb-generator/agents/: knowledge_base_agent.py
kb-generator/ingester/: __init__.py  chunker.py  cli.py  config.py  init_schema.py  pipeline.py  schema.cypher  verify_schema.py
kb-generator/ingester/clients/: __init__.py  chroma_client.py  neo4j_client.py
kb-generator/ingester/loaders/: __init__.py  invias_loader.py  md_loader.py
kb-generator/ingester/mappers/: __init__.py  corredor.py  documento.py  normativa.py  producto.py  tarifa.py
kb-generator/scripts/: agente_estructuracion_documentos.md  descargar_base_conocimiento.py  descargar_corredores_invias.py  generar_fichas_curateadas.py  generar_sicetac_md.py  limpiar_descargas.py  validar_base_conocimiento.py
kb-generator/skills/knowledge-base-builder/: SKILL.md
scripts/: bootstrap.sh
src/adapters/input/cli/: ingest_cli.py
src/adapters/output/llm/: anthropic_adapter.py  openai_adapter.py
src/core/domain/: models.py
src/core/utils/: response_parser.py
ui/: app.py
